--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=TaxuTb--nxw">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+                <img src="https://static.wikia.nocookie.net/madoka/images/3/32/Connect37.jpg/revision/latest/scale-to-width-down/250?cb=20230331205641" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
