--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <a href="https://www.youtube.com/watch?v=TaxuTb--nxw">
                 <img src="https://media.discordapp.net/attachments/1045078180828041347/1275211692510412882/images.png?ex=66c510ef&is=66c3bf6f&hm=aa95500063c41a7b89f6b337f8113811c470e183ce1f623c86a4f374bb487d23&=&format=webp&quality=lossless" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=Bw-5Lka7gPE">
+                <img src="https://i.ytimg.com/vi/Bw-5Lka7gPE/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
