--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="https://i.ytimg.com/vi/Bw-5Lka7gPE/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=3oFTHxkOzjE">
-                <img src="https://media.discordapp.net/attachments/1045078180828041347/1275213261880688741/noragami.png?ex=66c51265&is=66c3c0e5&hm=5afa5b0a845405b9da15bc5a3b7ac4fe89790a6864aab7e611ed691610c778c2&=&format=webp&quality=lossless&width=1101&height=619" />
+                <img src="https://media.discordapp.net/attachments/1045078180828041347/1275213067105603694/filtersquality95formatwebp.png?ex=66c51237&is=66c3c0b7&hm=5e858a3e26d3443eda43af1acbc36a6c70dc991f30204b2d0d79dda1fb03567d&=&format=webp&quality=lossless" />
             </a>
             <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
                 <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
