--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <a href="https://www.youtube.com/watch?v=3oFTHxkOzjE">
                 <img src="https://media.discordapp.net/attachments/1045078180828041347/1275213067105603694/filtersquality95formatwebp.png?ex=66c51237&is=66c3c0b7&hm=5e858a3e26d3443eda43af1acbc36a6c70dc991f30204b2d0d79dda1fb03567d&=&format=webp&quality=lossless" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=oDx_KACChSs">
+                <img src="https://m.media-amazon.com/images/S/pv-target-images/468684cdff82dd7b03478634baae357363c4ab28a9650e7bdf939f0487dc7add.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
                 <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
