--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/T3ivdddYT9k?si=pGhyfqpBwTBIHl6p"
+            <iframe width="560" height="315" src="https://youtu.be/embed/T3ivdddYT9k?si=pGhyfqpBwTBIHl6p"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
