--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>OURAN HIGHSCHOOL HOST CLUB</h1>
-            <p>#ohshc</p>
+            <h1>JOJO'S BIZARRE ADVENTURE</h1>
+            <p>#diamond is unbreakable</p>
         </div>
 
         <div>
